# brilliance

./: .env.example  .gitignore  DEPLOYMENT_SECURITY.md  FRONTEND_DEFAULTS_FIX.md  LICENSE  Procfile  QUICK_ZDR_SETUP.md  README.md  REPOSITORY_STRUCTURE.md  ZDR_IMPLEMENTATIONS.md  commands.txt  package.json  requirements.txt  start.sh  vercel.json
backend/: dump.rdb  pyproject.toml
backend/brilliance/: celery_app.py  cli.py  logging_config.py
backend/brilliance/agents/: build_query.py  query_optimizer_agent.py  research_agent.py  tools.py  workflows.py
backend/brilliance/api/: __init__.py  v1.py
backend/brilliance/synthesis/: synthesis_tool.py
backend/brilliance/tools/: arxiv.py  openalex.py  pubmed.py
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  index.css
frontend/src/components/: LoadingScreen.jsx  ResultsPage.jsx  SearchPage.jsx
