[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brilliance"
version = "0.1.0"
description = "Multi-source research assistant with LLM synthesis"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Your Name", email = "you@example.com" }]

# Runtime deps (mirrors requirements.txt)
dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "feedparser>=6.0",
    "tqdm>=4.60",
    "pydantic>=2.11,<3",
    "openai-agents",
    "openai",
    "celery>=5.3",
    "redis>=5.0",
    # add anything else you call in production
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "black>=24.0",
    "pre-commit>=3.6",
]

[tool.setuptools]

[tool.setuptools.packages.find]
where = ["."]
include = ["brilliance*"]

# ----  Tooling config (optional but handy) ----
[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"